<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF153250"
    tools:context=".activity_three">

    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:text="@string/quiz_info"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/statementView"
        android:layout_width="357dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Question1"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="355dp"
        android:layout_height="152dp"
        app:layout_constraintEnd_toEndOf="@+id/statementView"
        app:layout_constraintStart_toStartOf="@+id/statementView"
        app:layout_constraintTop_toBottomOf="@+id/statementView">

        <RadioButton
            android:id="@+id/btn_radio1"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="RadioButton"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/btn_radio2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="RadioButton"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/btn_radio3"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="RadioButton"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next1"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>