<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF153250"
    tools:context=".activity_QuizQuestion2">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Question2"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/statementview2"
        android:layout_width="357dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="358dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="@+id/statementview2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/statementview2"
        app:layout_constraintTop_toBottomOf="@+id/statementview2">

        <RadioButton
            android:id="@+id/btn_radio2_1"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="RadioButton"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/btn_radio2_2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="RadioButton"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/btn_radio2_3"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="RadioButton"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next3"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>