<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF153250"
    tools:context=".activity_QuizQuestion4">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Question4"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/textViewImage"
        android:layout_width="177dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/qimage0" />

    <TextView
        android:id="@+id/imageStatement"
        android:layout_width="143dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewImage"
        app:layout_constraintTop_toTopOf="@+id/textViewImage" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="351dp"
        android:layout_height="155dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageStatement"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewImage"
        app:layout_constraintTop_toBottomOf="@+id/textViewImage">

        <RadioButton
            android:id="@+id/btn_radio4_1"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked4"
            android:text="RadioButton"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/btn_radio4_2"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked4"
            android:text="RadioButton"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/btn_radio4_3"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked4"
            android:text="RadioButton"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_result"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:onClick="onRadioButtonClicked4"
        android:text="@string/btn_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

</androidx.constraintlayout.widget.ConstraintLayout>